AKS-Demo/archive/ingress.no-auth.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts: 
    - demo-aks.westus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: demo-aks.westus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: party-clippy
          servicePort: 80
