AKS-Demo/archive/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - aks-demo.westus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: aks-demo.westus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: aks-helloworld
          servicePort: 80
      - path: /hello-world-two
        backend:
          serviceName: ingress-demo
          servicePort: 80
      - path: /clippy
        backend:
          serviceName: party-clippy
          servicePort: 80
      - path: /web-app
        backend:
          serviceName: web-app
          servicePort: 80
